# B13

./: CMakeLists.txt  CMakePresets.json  readme.md
Alice/: app.ini
Bob/: app.ini
src/: lamport.cpp  lamport.h  mainwindow.cpp  mainwindow.h
